force-app/main/default/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of expense</description>
    <inlineHelpText>Select a specific Category, If not listed please select other and add comments.</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Vegetables</fullName>
            </value>
            <value>
                <fullName>Non Veg</fullName>
            </value>
            <value>
                <fullName>Dairy Eggs Batter</fullName>
            </value>
            <value>
                <fullName>Internet/Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Groceries</fullName>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
            <value>
                <fullName>Fruits</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Personal care</fullName>
            </value>
            <value>
                <fullName>Mobile Recharge</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Medicines</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Tourism</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <default>true</default>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>