force-app/main/default/objects/Expense__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <defaultValue>&quot;No Comments&quot;</defaultValue>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>