force-app/main/default/objects/Expense__c/fields/Expense_on__c.field-meta.xml
<CustomField>
    <fullName>Expense_on__c</fullName>
    <defaultValue>&quot;Common&quot;</defaultValue>
    <inlineHelpText>Individual - Self expense
Pair - Sharing between 2 friends
Common - Common for all the users</inlineHelpText>
    <label>Expense on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Pair</fullName>
            </value>
            <value>
                <fullName>Common</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>