force-app/main/default/objects/Expense__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Select the member</description>
    <label>Member</label>
    <referenceTo>User_Master__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>