force-app/main/default/objects/Expense__c/fields/Shared_with__c.field-meta.xml
<CustomField>
    <fullName>Shared_with__c</fullName>
    <label>Shared with</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Expense_on__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aravindh</fullName>
            </value>
            <value>
                <fullName>Tejas</fullName>
            </value>
            <value>
                <fullName>Yokesh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>