force-app/main/default/objects/Expense__c/fields/Wallet_Name__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Name__c</fullName>
    <label>Wallet Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paytm</fullName>
            </value>
            <value>
                <fullName>Zeta</fullName>
            </value>
            <value>
                <fullName>Hungerbox</fullName>
            </value>
            <value>
                <fullName>Mobikwik</fullName>
            </value>
            <value>
                <fullName>Ola money</fullName>
            </value>
            <value>
                <fullName>Sodexo</fullName>
            </value>
            <value>
                <fullName>PayU money</fullName>
            </value>
            <value>
                <fullName>PhonePe</fullName>
            </value>
            <value>
                <fullName>Google Pay</fullName>
            </value>
            <value>
                <fullName>Gift card</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Delivery wallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>