force-app/main/default/objects/Expense__c/recordTypes/Common_Records.recordType-meta.xml
<RecordType>
    <fullName>Common_Records</fullName>
    <active>true</active>
    <label>Common Records</label>
</RecordType>