force-app/main/default/objects/Expense__c/validationRules/Card_transaction_should_have_Bank_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Card_transaction_should_have_Bank_Name</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Payment_Method__c) = &#39;Card&#39; &amp;&amp; ISBLANK(TEXT(Bank_Name__c))</errorConditionFormula>
    <errorDisplayField>Bank_Name__c</errorDisplayField>
    <errorMessage>Please select a &#39;Bank name&#39; for Card transactions</errorMessage>
</ValidationRule>