force-app/main/default/objects/Expense__c/validationRules/Others_category_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Others_category_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( TEXT(Category__c) = &#39;Others&#39;,  Comments__c = &#39;No Comments&#39;,   ISBLANK(Comments__c) )</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Please Enter a valid Comment for the Expense. Other Category cannot have &#39;No Comments&#39;</errorMessage>
</ValidationRule>