force-app/main/default/objects/Expense__c/validationRules/Wallet_Name_on_wallet_expense.validationRule-meta.xml
<ValidationRule>
    <fullName>Wallet_Name_on_wallet_expense</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Payment_Method__c) = &#39;Wallet&#39; &amp;&amp; ISBLANK(TEXT(Wallet_Name__c))</errorConditionFormula>
    <errorDisplayField>Wallet_Name__c</errorDisplayField>
    <errorMessage>Please select the wallet name. Wallet transaction should have a Wallet Name</errorMessage>
</ValidationRule>