force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense_on__c</columns>
    <columns>Member__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expense_on__c</field>
        <operation>equals</operation>
        <value>Pair,Common</value>
    </filters>
    <filters>
        <field>Expense_on__c</field>
        <operation>notEqual</operation>
        <value>Individual</value>
    </filters>
    <label>All</label>
</ListView>