force-app/main/default/objects/Expense__c/listViews/Aravindh_Transactions.listView-meta.xml
<ListView>
    <fullName>Aravindh_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Member__c</field>
        <operation>equals</operation>
        <value>Aravindh</value>
    </filters>
    <filters>
        <field>Expense_on__c</field>
        <operation>notEqual</operation>
        <value>Individual</value>
    </filters>
    <label>Aravindh Transactions</label>
</ListView>