force-app/main/default/objects/Expense__c/listViews/Current_month_Records.listView-meta.xml
<ListView>
    <fullName>Current_month_Records</fullName>
    <columns>Category__c</columns>
    <columns>Amount__c</columns>
    <columns>Member__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Expense_on__c</columns>
    <columns>Comments__c</columns>
    <columns>Payment_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expense_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Expense_on__c</field>
        <operation>equals</operation>
        <value>Common</value>
    </filters>
    <label>Current month Records</label>
</ListView>