force-app/main/default/objects/Expense__c/listViews/November_2017_Transactions.listView-meta.xml
<ListView>
    <fullName>November_2017_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Amount__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Category__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expense_Date__c</field>
        <operation>lessThan</operation>
        <value>11/30/2017</value>
    </filters>
    <label>November 2017 Transactions</label>
</ListView>