force-app/main/default/objects/Expense__c/listViews/Tejas_Transaction.listView-meta.xml
<ListView>
    <fullName>Tejas_Transaction</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Member__c</field>
        <operation>equals</operation>
        <value>Tejas</value>
    </filters>
    <label>Tejas Transaction</label>
</ListView>