force-app/main/default/objects/Expense__c/listViews/Yokesh_Transaction.listView-meta.xml
<ListView>
    <fullName>Yokesh_Transaction</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Member__c</field>
        <operation>equals</operation>
        <value>Yokesh</value>
    </filters>
    <label>Yokesh Transaction</label>
</ListView>